--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "2amigos/yii2-file-upload-widget": "~1.0"
+        "2amigos/yii2-file-upload-widget": "~1.0",
+        "imagine/imagine": "~0.5.0"        
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
